--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,19 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background-color: #1e293b;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+header {
+    text-align: center;
+    font-size: 3vh;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+    text-align: center;
+}
 
 main {
     display: flex;
@@ -12,13 +25,25 @@ section {
     width: 50vw;
 
     display: grid;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: 5vh 90vh;
+    grid-auto-rows: auto;
+}
+
+.gameboard-container {
+    width: 100%;
+    height: 100%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .gameboard{
-    border-style: solid;
+    background-color: #f1f5f9;
+
     width: 90%;
-    height: 90%;
+    height: 100%;
 
     margin: 0;
     display: grid;
@@ -28,16 +53,55 @@ section {
 
 }
 
-.gameboard-container {
-    border-style: solid;
-    width: 100%;
-    height: 100%;
-    
-    display:flex;
-    justify-content: center;
-    align-items: center;
+
+#shipyard {
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
 }
 
+#shipyard img {
+    height: 10vh;
+    width: 10vh;
+}
 .tile {
     border-style: solid;
+    color: #1e293b;
+}
+
+.tile > div {
+    font-size: 6vh;
+}
+
+#p2-gameboard > .tile:hover {
+    background-color:#64748b;
+}
+
+#end-screen {
+    height: 100vh;
+    width: 100vw;
+
+    display: grid;
+    grid-template-rows: 80% 20%;
+}
+#winning-message {
+
+    width: 100%;
+
+    color: white;
+
+    text-align: center;
+
+    font-size: 15vh;
+}
+
+#play-again {
+    font-size: 6vh;
+    width: 24%;
+
+    border-radius: 30px;
+}
+
+#play-again:hover {
+    background-color: #64748b;
 }
